# rsg

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/rsg/: CMakeLists.txt
lib/rsg/include/rsg/: rsg.h
lib/rsg/src/: r_abstract_node.c  r_callback_node.c  r_camera_node.c  r_clock_node.c  r_closure.c  r_context.c  r_global_context.c  r_group_node.c  r_init.c  r_keyboard_manipulator_node.c  r_local_context.c  r_main_loop.c  r_malloc.c  r_mesh_node.c  r_mouse_manipulator_node.c  r_node.c  r_property_printer_node.c  r_screen_node.c  r_shader_loader.c  r_shader_node.c  r_shader_program_node.c  r_trackball_manipulator_node.c  r_uniform_setter_node.c  r_value.c  r_value_gvalue.c  rsg_internal.h
test/: CMakeLists.txt  test1.c
